# git-files-generator

./: .gitignore  Cargo.toml  README.MD
src/: cli.rs  files.rs  http_client.rs  main.rs  utils.rs
src/files/: env_example.rs  gitignore.rs  license.rs  readme.rs
src/files/gitignore/: generate.rs  types.rs
